Fix carousel responsiveness on Firefox

--- a/src/components/ReviewCarousel.module.css
+++ b/src/components/ReviewCarousel.module.css
@@ -9,9 +9,14 @@
   cursor: default;
 }
 
+.carousel-container {
+  margin-left: 0px;
+  width: 100%;
+}
+
 @media (min-width: 1040px) {
   .carousel-container {
-    margin-left: -20% !important;
-    width: 140% !important;
+    margin-left: -20%;
+    width: 140%;
   }
 }
